Phase 2.5: Reminders with Queue

--- a/tasks.json
+++ b/tasks.json
@@ -5,6 +5,6 @@
         "description": "Compltete this project as soon as possible",
         "priority": "High",
         "due_date": "2025-08-25",
-        "status": "Pending"
+        "status": "Completed"
     }
 ]
